@@ -1,5 +1,7 @@
 AUX aircrack-ng-1.0_rc3-respect_LDFLAGS.patch 3124 RMD160 7fdc53adcc92067fe275d8cf178c7ee70e960fff SHA1 9a389fe635dca311a707ce5fc516185645eff81a SHA256 cfcf81b63bd31983ade18a350ceda2ad10b8ad4362a1f9380798a94ab4191d75
 DIST aircrack-ng-1.0-rc3.tar.gz 1512442 RMD160 3ac2dc27f2a1511b42bfa285691faa2c4c0d3047 SHA1 2697b6cea586d7501180e3bec1e13f1bcb4f90d8 SHA256 24950265f13aed6febc7b9511173ca1ab85a4f199c430594059ec796d4b3c05f
+DIST aircrack-ng-1.0-rc4.tar.gz 1536616 RMD160 f7684d0972dbeb0498c5598ddac339e8b2079eb5 SHA1 e2576d7ad185b17b16e6bf726ccf408c65c42d82 SHA256 c43047f524eafb26ecd12680e89fcb7fb806be1073b09649248fcf64e767e417
 EBUILD aircrack-ng-1.0_rc3.ebuild 2186 RMD160 f53b17ab629df903a2ca973ae7d0633089e962b6 SHA1 3b0dee634e7d59b30db62bb478713b9ef198427c SHA256 a20e5eefe18bfb45482cd96319a8c698fb8f166a9505d901e11e32a3d298d6f4
-MISC ChangeLog 7086 RMD160 6fb1102a643faffb616c43baaa9a2a007219845f SHA1 044a8df0b67b942e06110d2b01a7bf2d9db4ced8 SHA256 f13d3654783fe8987e97fbad1fcd4afee67d6d30fb7aec3db9c0477e0afc80c0
+EBUILD aircrack-ng-1.0_rc4.ebuild 2017 RMD160 1c1416128ddb9b059eb3ed0c602cd8f6b279bb9a SHA1 0eefadc86d873f81d360e6a6b65027448be4359a SHA256 f30d1059f8343e1ab37ee55981fd59686ff479d4b1d177b280cc2e2d7877c40d
+MISC ChangeLog 7521 RMD160 0ac9eac2a0a4e925bb1cbcde58c0e62bb6cd4b26 SHA1 07b8680ccaa912bdd44e425fb3edf36e0fa09580 SHA256 14888f4ea7e606f88885e98c9d2a20ba9d9901682079ad3fef88ca42331b8235
 MISC metadata.xml 545 RMD160 74b28f94434b9af081b71806679b128b42cb8068 SHA1 b9b41decbf07297e72c3f682be1c13415df1f402 SHA256 af8903a9f2e95968febae6760b251c2145e3a26569f71ff64266ae2b4fcbbb2a
